# KursachMari-Tigrex-ServerBase

./: CMakeLists.txt  CMakePresets.json  README.md
KursachMari-Tigrex-ServerBase/: CMakeLists.txt  Handlers.h  KursachMari-Tigrex-ServerBase.cpp
KursachMari-Tigrex-ServerBase/abstract-front/: ApiProcessor.cpp  ApiProcessor.h
KursachMari-Tigrex-ServerBase/architecture/: IModule.h
KursachMari-Tigrex-ServerBase/database/: DatabaseModule.cpp  DatabaseModule.h  db_handlers.h
KursachMari-Tigrex-ServerBase/server/: FileCache.cpp  FileCache.h  RequestHandler.h
KursachMari-Tigrex-ServerBase/utils/static/: employees.html  salary.html
KursachMari-Tigrex-ServerBase/utils/static/components/: footer.js  navbar.js
static/: attention.html  campaigns.html  clients.html  errorNotFound.html  hours.html  index.html  style.css  tasks.html  team.html
static/components/: footer.js  navbar.js
static/modules/: dataCache.js  notifications.js
